aws-infra-cfn.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: NLB+TargetGroup+ASG+LaunchConfig+Dovecot+EFS Demo
Parameters:
  EnvironmentSize:
    Type: String
    Default: SMALL
    AllowedValues:
      - SMALL
      - MEDIUM
      - LARGE
    Description: Select Environment Size (S,M,L)
  SpotInstanceType:
    Description: EC2 instance type
    Type: String
    Default: m4.large
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
      - m3.medium
      - m3.large
      - m3.xlarge
      - m3.2xlarge
      - m4.large
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
      - c3.large
      - c3.xlarge
      - c3.2xlarge
      - c3.4xlarge
      - c3.8xlarge
      - r3.large
      - r3.xlarge
      - r3.2xlarge
      - r3.4xlarge
      - r3.8xlarge
      # - i2.xlarge
      # - i2.2xlarge
      # - i2.4xlarge
      # - i2.8xlarge
      # - i3.xlarge
      # - i3.2xlarge
      # - i3.4xlarge
      # - i3.8xlarge
      # - i3.16xlarge
    ConstraintDescription: Please choose a valid instance type.
  SpotPrice:
    Type: String
    Default: 0.03
    Description: default spot price for SpotInstanceType selected above
Mappings:
  RegionMap:
    us-east-1:
      "AMALINUX" : "ami-b70554c8" # AMALINUX 2 MAY 2018 
    us-east-2:
      "AMALINUX" : "ami-71ca9114" # AMALINUX SEP 2016
    us-west-1:
      "AMALINUX" : "ami-de347abe" # AMALINUX SEP 2016
    us-west-2:
      "AMALINUX" : "ami-b04e92d0" # AMALINUX SEP 2016
    ca-central-1:
      "AMALINUX" : "ami-c59818a1" # AMALINUX 2 May 2018 
    eu-west-1:
      "AMALINUX" : "ami-d41d58a7" # AMALINUX SEP 2016
    eu-central-1:
      "AMALINUX" : "ami-0044b96f" # AMALINUX SEP 2016
    eu-west-2:
      "AMALINUX" : "ami-bfe0eadb" # AMALINUX SEP 2016 v01
    ap-southeast-1:
      "AMALINUX" : "ami-7243e611" # AMALINUX SEP 2016
    ap-southeast-2:
      "AMALINUX" : "ami-55d4e436" # AMALINUX SEP 2016
    ap-northeast-2:
      "AMALINUX" : "ami-a04297ce" # AMALINUX SEP 2016
    ap-northeast-1:
      "AMALINUX" : "ami-1a15c77b" # AMALINUX SEP 2016
    ap-south-1:
      "AMALINUX" : "ami-cacbbea5" # AMALINUX SEP 2016
    sa-east-1:
      "AMALINUX" : "ami-b777e4db" # AMALINUX SEP 2016
  InstanceSize:
    SMALL:
      "EC2" : "t2.micro"
      "DB" : "db.t2.micro"
    MEDIUM:
      "EC2" : "t2.small"
      "DB" : "db.t2.small"
    LARGE:
      "EC2" : "t2.medium"
      "DB" : "db.t2.medium"
Resources:
  Ec2SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: EC2 Security Group
  ingress1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !GetAtt Ec2SecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 110
      ToPort: 110
      CidrIp: 0.0.0.0/0
  ingress2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !GetAtt Ec2SecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 143
      ToPort: 143
      CidrIp: 0.0.0.0/0
  ingress3:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !GetAtt Ec2SecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
  ingress4:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !GetAtt Ec2SecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 25
      ToPort: 25
      CidrIp: 0.0.0.0/0
  EC2AutoScalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    CreationPolicy:
      ResourceSignal:
        # Count: "1"
        Timeout: PT15M
    Properties:
      AvailabilityZones:
        - us-east-1b
        - us-east-1c
        - us-east-1f
        # Fn::GetAZs: ""     
      LaunchConfigurationName: !Ref Ec2Instance
      Tags:
        - 
          Key: Name
          Value:  !Sub
            - "${StackName}"
            - StackName: !Ref AWS::StackName
          PropagateAtLaunch: true
      MinSize: 3
      MaxSize: 3
      DesiredCapacity: 3
      HealthCheckGracePeriod: 300
      
  Ec2Instance:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      KeyName: Joseph-ACG-Demo
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMALINUX] #/ Amazon Linux
      SecurityGroups:
        - !Ref Ec2SecurityGroup
        - default
      # SpotPrice: !Ref SpotPrice
      # InstanceType: !Ref SpotInstanceType
      InstanceType: !FindInMap [InstanceSize, !Ref EnvironmentSize, EC2]
